@@ -36,7 +36,7 @@ yours?</h3>
 Yes, there are many other programs that "do" notation.  However,
 anyone who plays both from recent editions and old (pre 1970) can
 attest that modern computer printouts do not look nice: they have a
-bland, mechanical look.  By contrast, we try to mimick traditional
+bland, mechanical look.  By contrast, we try to mimic traditional
 plate engraving in the general impression, layout algorithms, and
 the font design. Consequently, our output often beats our competitors
 when it comes to good looks.
@@ -45,7 +45,7 @@ when it comes to good looks.
 <h3>What is wrong with other computer printed scores?</h3>
 <p>
 Computer printed scores often lack subtle variations in spacing, which
-results in mechanical look. To prevent clashes between different
+results in mechanical appearance. To prevent clashes between different
 symbols, they are spaced very widely, which leads to an "airy"
 look. The heaviness of the layout is matched to that airy look: the
 symbols are usually too light, and the lines are too thin.  The wide
@@ -107,7 +107,9 @@ href=../download/>here</a>.
 No.  Not only do we give it away for free, but we also deliver it with
 full source code, and permission to distribute, modify, sell or
 mutilate it.  In other words, LilyPond is libre software; it is part
-of the GNU project, and distributed under the terms GNU GPL.
+of the GNU project, and distributed under the terms of the
+<a href="http://www.gnu.org/copyleft/gpl.html">GNU General Public
+License.</a> 
 <p>
 In fact we think that this is much more important than cost. It means
 that you have the freedom to fix, modify and extend the program, or
@@ -305,7 +307,7 @@ for the lyrics.
 
 Of course, the output obtained through TeX can be converted to usable
 PostScript, and PDF which renders nicely on screen. This PostScript
-can be rendered as a PNG images for use on webservers.
+can be rendered as PNG images for use on webservers.
 
 <! LilyPond is in fact not limited to TeX. The program design allows
 for other output formats. In particular, LilyPond has direct
@@ -372,7 +374,7 @@ original file was written for. Therefore, it is important to add
 \version "1.3.17" </xmp>
 <p>
 Changes that cannot be handled by simple edits are marked by a bump in
-the major version number: converting 1.8 to 2.0 files needs
+the major version number: converting 1.8 to 2.0 files will need
 overseeing.
 <p>
 
