@@ -17,9 +17,9 @@ Never heard of LilyPond? Read the <a href=../switch/>introduction</a>
 Questions?  Read the <a href=faq.html>FAQ</a>
 
 <li>
-Interested in backgrounds?  Read our <a href=automated-engraving/>essay on music
-engraving and computer notation</a>, or look at our <a
-href=pubs.html>publications</a>.
+Interested in background information?  Read our <a
+href=automated-engraving/>essay on music engraving and computer
+notation</a>, or look at our <a href=pubs.html>publications</a>.
 
 <li>
 LilyPond was written, conceived and directed by the 
@@ -84,11 +84,11 @@ LilyPond is part of the <a href="http://www.gnu.org/">GNU Project</a>.
 
 <a href="http://www.linuxaudiodev.org/">
 <img align=right src="http://www.linuxdj.com/audio/lad/graphics/ladbanner_50.gif"
-       alt="Linx Audio Developers Logo"></a>
+       alt="Linux Audio Developers Logo"></a>
 
 <p>
 
-The developers cooperate with <a
+The developers cooperate with the <a
 href="http://www.linuxdj.com/audio/lad/eventslt2003.php3"> Linux Audio
 Developers</a> group.
 
