@@ -9,7 +9,7 @@ out to
 
 <ul>
 <li> Chris Sawer, for running the Mutopia archive
-<li> Mats Bengtsson and Graham Parcival  for tirelessly answering
+<li> Mats Bengtsson and Graham Percival  for tirelessly answering
 questions
 <li> Paul Roberts and James Ingram, for music engraving tips
 </ul>
