@@ -65,15 +65,69 @@
       9
     </td>
     <td><b>Download 
-	<a href="ftp://ftp.lilypond.org/pub/LilyPond/binaries/RedHat-9/lilypond-1.7.30-1.i386.rpm">lilypond</a>,
+	<a href="ftp://ftp.lilypond.org/pub/LilyPond/binaries/RedHat-9/lilypond-1.8.0-1.i386.rpm">lilypond</a>,
 	
 	<a
-	href="ftp://ftp.lilypond.org/pub/LilyPond/binaries/RedHat-9/lilypond-documentation-1.7.30-1.i386.rpm">documentation</a></b>
+	href="ftp://ftp.lilypond.org/pub/LilyPond/binaries/RedHat-9/lilypond-documentation-1.8.0-1.i386.rpm">documentation</a></b>
 	(<a href="#redhat-notes">NOTE</a>)
     </td>
-    <td>1.7.30</td>  
+    <td>1.8.0</td>  
     <td><a href="mailto:bug-lilypond@gnu.org">LilyPond development team</a></td>
   </tr>
+    
+  <tr>
+  <td><p align=center><img src="@IMAGES@windows.png"></td>
+    <td>
+      MS Windows (Cygwin)
+    </td>
+    <td>
+      Experimental/[test]
+    </td>
+    <td>
+      <b>Go <a href="windows.html">here</a></b>
+    </td>
+    <td>1.7.29</td>
+    <td>
+      <a href="mailto:bug-lilypond@gnu.org">LilyPond development team</a>
+    </td>
+  </tr>
+
+
+
+<tr>
+<td></td>
+<td>Source</td><td></td>
+<td><b>Download 
+<a
+href="ftp://ftp.lilypond.org/pub/LilyPond/v1.7/lilypond-1.8.0.tar.gz">tarball</a>
+(<a href="../devel/#warning">warning</a>)
+</td>
+<td>
+1.8.0
+</td>
+</tr>
+  
+</table>
+
+<h2>Download LilyPond 1.7</h2>
+
+The 1.7 series are development releases; use 1.8 if available.
+
+<a name=1.8></a>
+<table border="0" rules="rows" cellpadding="3">
+
+
+  <!-- use this as template for new entry !-->
+  <tr>
+    <td></th>
+    <th>Platform</th>
+    <th>Version</th>
+    <th>Go here</th>
+    <th>LilyPond version</th>
+    <th>Courtesy</th>
+  </tr>
+  
+
   
   <tr>
   <td><p align=center><img src="@IMAGES@mandrake-logo.jpeg"></td>
@@ -91,40 +145,9 @@
     <td>Thac's RPMs for Mandrake</td>
   </tr>
   
-  <tr>
-  <td><p align=center><img src="@IMAGES@windows.png"></td>
-    <td>
-      MS Windows (Cygwin)
-    </td>
-    <td>
-      Experimental/[test]
-    </td>
-    <td>
-      <b>See the <a href="windows/cygwin.html">Cygwin page</a></b>
-      or <a href="http://cygwin.com/setup.exe">install now!</a>
-    </td>
-    <td>1.7.29</td>
-    <td>
-      <a href="mailto:bug-lilypond@gnu.org">LilyPond development team</a>
-    </td>
-  </tr>
 
-
-
-<tr>
-<td></td>
-<td>Source</td><td></td>
-<td><b>Download 
-<a
-href="ftp://ftp.lilypond.org/pub/LilyPond/v1.7/lilypond-1.7.30.tar.gz">tarball</a>
-(<a href="../devel/#warning">warning</a>)
-</td>
-<td>
-1.7.30
-</td>
-</tr>
-  
 </table>
+
 
 
 <h2>Download LilyPond 1.6</h2>
@@ -243,8 +266,7 @@ href="ftp://ftp.lilypond.org/pub/LilyPond/v1.7/lilypond-1.7.30.tar.gz">tarball</
       Current/[curr]
     </td>
     <td>
-      <b>See the <a href="windows/cygwin.html">Cygwin page</a></b>
-      or <a href="http://cygwin.com/setup.exe">install now!</a>
+      <b>Go <a href="windows.html">here</a></b>
     </td>
     <td>1.6.11</td>
     <td>
@@ -274,11 +296,11 @@ href="ftp://ftp.lilypond.org/pub/LilyPond/v1.7/lilypond-1.7.30.tar.gz">tarball</
 <td>Source</td><td></td>
 <td><b>Download 
 <a
-href="ftp://ftp.lilypond.org/pub/LilyPond/v1.6/lilypond-1.6.11.tar.gz">tarball</a>
+href="ftp://ftp.lilypond.org/pub/LilyPond/v1.6/lilypond-1.6.12.tar.gz">tarball</a>
 (<a href="../devel/#warning">warning</a>)
 </td>
 <td>
-1.6.11
+1.6.12
 </td>
 </tr>
 
