@@ -19,8 +19,9 @@ Check out the documentation, which should be installed in
    /usr/share/doc/lilypond/
 </pre>
 <p>
-If it's not there, browse the  documentation <a
-href="/doc/">on-line</a>.
+If it's not there, browse the documentation <a
+href="http://lilypond.org/doc/v1.8">on-line</a>.  (For other versions
+than 1.8, go <a href="http://lilypond.org/doc/">here</a>).
 
 <h2>Help!</h2>
 
