@@ -53,16 +53,25 @@ href="about/automated-engraving/">our essay...</a></p> </td>
 <td width="60%">
 <dl>
   <dt>
+    August 7, 2003
+  </dt>
+  <dd>
+    LilyPond 1.8 is released.
+    Get it <a href="download/">here</a>,
+    or read <a
+  href="http://lilypond.org/doc/v1.8/Documentation/topdocs/out-www/NEWS.html">the release notes</a>. 
+  </dd>
+  <dt>
+    August 7, 2003
+  </dt>
+  <dd>
+    New website went live!
+  </dd>
+  <dt>
     August 6, 2003
   </dt>
   <dd>
     Announced new website.
-  </dd>
-  <dt>
-    August 1, 2003
-  </dt>
-  <dd>
-   LilyPond 1.7.30 released.
   </dd>
   </dl>
 <p align=right><a href="old-news.html">older news...</a></p>
@@ -91,7 +100,7 @@ href="about/automated-engraving/">our essay...</a></p> </td>
 
 <tr>
 <td>Stable</td>
-<td>1.6.11</td>
+<td>1.6.12</td>
 <td><a href=download/#1.6>download</a>,
 <a href=http://lilypond.org/doc/v1.6/>documentation</a></td>
 </tr>
