@@ -1,6 +1,11 @@
 
 <dl>  
-
+  <dt>
+    August 1, 2003
+  </dt>
+  <dd>
+   LilyPond 1.7.30 released.
+  </dd>
   <dt>
     July 30, 2003
   </dt>
