@@ -17,13 +17,12 @@ LilyPond&rdquo;</h1>
 <! te kort ... mag wat langer.>
 
 Scores made with computers almost always look bland and uninspiring.
-For what reason? The machines may be mechanic, but why should their
-products be?  With that thought in mind, we started writing
-programming seven years ago.  We have tried to capture the rules of
-good music engraving in a program, and that program is called
-<em>LilyPond</em>.  We built it like we expect software to be: robust,
-open and flexible.  The best is that you can create gorgeous sheet
-music comfortably with LilyPond.
+For what reason?  Machines may be mechanical, but why should their
+products be?  With that thought in mind, we started programming seven
+years ago.  We have tried to capture the rules of good music engraving
+in a program, and that program is called <em>LilyPond</em>.  We built
+it like we expect software to be: robust, open and flexible.  The best
+is that you can create gorgeous sheet music comfortably with LilyPond.
 
 <p>Have fun!
 
