@@ -2,19 +2,19 @@
 <h1>Testimonials</h1>
 
 
-
 <p>
-&ldquo;Anyway, LilyPond does an amazingly good job -- and the input files
-are *really* small: 17kByte for 5 pages of fairly complicated modern
-music is terrific!&rdquo;
+&ldquo;I think that Lilypond is already ready for "prime time" -- I've used it
+for two years in a university music composition course, thereby saving
+me $300 (or whatever the "cheap" student version of Finale or Sibelius
+costs).  And some people have exclaimed "wow!  How did you get Finale to
+make music that looks so good?"&rdquo;
+
 <p align=right>
-<em>
-<a href="http://www.troff.org/whoswho.html#werner">Werner Lemberg</a>,
-Conductor at the Theatre in Koblenz, Germany and
-distinguished GNU Hacker.</em>
+<em><a href="http://www.sfu.ca/~gperciva/">Graham Percival</a>, cello teacher.
+</em>
+
+
 <p>
-
-
 &ldquo;Lilypond is obviously the zillion-ton gorilla [of great music
 typesetting].&rdquo;
 
@@ -46,17 +46,17 @@ more I like it!&rdquo;
 <a href=http://www.mutopiaproject.org>Mutopia</a> contributor
 </EM>
 
+
 <p>
-&ldquo;I think that Lilypond is already ready for "prime time" -- I've used it
-for two years in a university music composition course, thereby saving
-me $300 (or whatever the "cheap" student version of Finale or Sibelius
-costs).  And some people have exclaimed "wow!  How did you get Finale to
-make music that looks so good?"&rdquo;
-
+&ldquo;Anyway, LilyPond does an amazingly good job -- and the input files
+are *really* small: 17kByte for 5 pages of fairly complicated modern
+music is terrific!&rdquo;
 <p align=right>
-<em><a href="http://www.sfu.ca/~gperciva/">Graham Parcival</a>, cello teacher.
-</em>
-
+<em>
+<a href="http://www.troff.org/whoswho.html#werner">Werner Lemberg</a>,
+Conductor at the Theatre in Koblenz, Germany and
+distinguished GNU Hacker.</em>
+<p>
 
 
 <h2>Why all the praise?</h2>
