@@ -1,3 +1,7 @@
+2003-08-07  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+
+	* site/: spelling fixes, courtesy Chris Jackson.
+
 2003-08-07  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* site/devel/packaging.html (href): Fix cygwin links.
